--- a/package.json
+++ b/package.json
@@ -1,20 +1,8 @@
 {
   "name": "@skypilot/babel-config-node-typescript",
-  "description": "SkyPilot's babel.config.js for Node projects using TypeScript",
-  "homepage": "https://github.com/skypilotcc/babel-config-node-typescript#readme",
   "version": "1.0.1",
-  "main": "lib/index.js",
-  "author": {
-    "email": "william@thorsen.dev",
-    "name": "William Thorsen"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/skypilotcc/babel-config-node-typescript.git"
-  },
-  "bugs": {
-    "url": "https://github.com/skypilotcc/babel-config-node-typescript/issues"
-  },
+  "private": false,
+  "description": "SkyPilot's babel.config.js for Node projects using TypeScript",
   "keywords": [
     "babel",
     "back-end",
@@ -22,9 +10,21 @@
     "node",
     "typescript"
   ],
-  "devDependencies": {
-    "@skypilot/toolchain": "^3.5.14"
+  "homepage": "https://github.com/skypilotcc/babel-config-node-typescript#readme",
+  "bugs": {
+    "url": "https://github.com/skypilotcc/babel-config-node-typescript/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/skypilotcc/babel-config-node-typescript.git"
+  },
+  "license": "ISC",
+  "author": {
+    "name": "William Thorsen",
+    "email": "wthorsen@skypilot.dev"
+  },
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "/lib"
   ],
@@ -43,13 +43,13 @@
     "test": "jest",
     "typecheck": "tsc"
   },
-  "private": false,
-  "license": "ISC",
-  "publishConfig": {
-    "access": "restricted"
-  },
-  "types": "lib/index.d.ts",
   "dependencies": {
     "babel-plugin-root-import": "^6.5.0"
+  },
+  "devDependencies": {
+    "@skypilot/toolchain": "^3.5.14"
+  },
+  "publishConfig": {
+    "access": "restricted"
   }
 }
